Backed out changeset 9d3d5c2225aa (bug 971034) for stretching all the icons when navbar includes add-ons with overly large toolbar icons, a=backout, rs=mconley,MattN,gijs,jaws,Unfocused

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -590,7 +590,6 @@ toolbar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker:-moz-lwtheme-bri
 #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
   padding: 8px 2px;
   -moz-box-pack: center;
-  -moz-box-align: stretch;
 }
 
 #nav-bar #PanelUI-menu-button {
